Update \setenumextmeta in test file

--- a/sources/test-pkg/enumext-05.tex
+++ b/sources/test-pkg/enumext-05.tex
@@ -22,8 +22,8 @@
 \setenumext[enumext,1]{columns=2,nosep,save-ref=true,save-sep={ },wrap-opt=\fbox{##1}, show-ans=true}
 \setenumext[keyans]{columns=2,noitemsep}
 \setenumext[keyans*]{columns=2,noitemsep}
-\setenumextmeta[enumext,2]{myroman}{no-store, label=\Roman*., noitemsep}
-\setenumextmeta[enumext,2]{myarabic}{no-store,list-offset=0.5cm,label=(\arabic*),noitemsep}
+\setenumextmeta[2]{myroman}{no-store, label=\Roman*., noitemsep}
+\setenumextmeta[2]{myarabic}{no-store,list-offset=0.5cm,label=(\arabic*),noitemsep}
 \begin{document}
 \section{The enumext package in action}
 
